--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
     @apply max-w-[1240px] mx-auto px-[4%] md:px-0
 }
 
+/* slides custom css */
 
 .container-padding-bottom {
     padding-bottom: 40px;
